# interactigen-py

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
notes/: interactigen-getting-started.ipynb
src/interactigen/: __init__.py  brokenjsonparser.py  commons.py  interactigen.py
src/interactigen/commands/: __init__.py  gen_new_phrasings.py  gen_transformed_phrasings.py
tests/: test_broken_json_parser_fix_single_quote_strings.py  test_broken_json_parser_parse_json_markdown.py
